Implement proper consent for petitions (#223)
Implements proper consent flow actionnetwork.org petition embedding.


![petitions](https://github.com/ictunion/main-website/assets/2130305/98b3e91e-e8e5-4c9a-830b-0d8df98c7700)


----------
__Please confirm the following:__

- [x] I accept and respect the [statuses of Odborová organizace
pracujících v
ICT](https://ictunion.cz/downloads/ictunion-statutes-en.pdf)
- [x] I'm providing all content changes under the [CC BY
4.0](https://creativecommons.org/licenses/by/4.0/) license

---------

[anonymized]
[anonymized]

--- a/assets/scss/_events.scss
+++ b/assets/scss/_events.scss
@@ -225,9 +225,12 @@
 }
 
 .event-detail-content {
-    @include style-md;
     flex-grow: 1;
     flex-shrink: 1;
+}
+
+.event-detail-content-post {
+    @include style-md;
 }
 
 .event-detail-info {
@@ -345,13 +348,24 @@ a.event-detail-content-register-cta {
 }
 
 .events-cookie-consent {
-    font-style: italic;
-    color: $primary-color;
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
     border: 2px solid $primary-color;
     border-radius: 4px;
     padding: 12px;
-    font-weight: 600;
+}
+
+.events-cookie-consent-text {
+    margin: 0;
+    color: $primary-color;
+    font-weight: 500;
     font-size: 21px;
+}
+
+.events-cookie-consent-accept-btn {
+    @include cta-btn;
+    padding: 18px 48px;
 }
 
 .event-detail-petition-embed {
