--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -29,3 +29,5 @@ but it makes long term maintainanece much simpler.
 @import "events";
 @import "faq";
 @import "statements";
+@import "workplaces";
+@import "shortcodes";
