--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -24,6 +24,9 @@
               <a href="{{ ref . "events" }}">{{ .Param "navigation.events" }}</a>
             </li>
             <li>
+              <a href="{{ ref . "workplaces" }}">{{ .Param "navigation.workplaces" }}</a>
+            </li>
+            <li>
               <a href="{{ ref . "faq" }}">{{ .Param "navigation.faq" }}</a>
             </li>
           </ul>
