--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -16,13 +16,13 @@
         <a href="{{ ref . "about" }}">{{ .Site.Param "navigation.aboutUs" }}</a>
       </li>
       <li>
-        <a href="{{ ref . "statutes" }}">{{ .Site.Param "navigation.statutes" }}</a>
-      </li>
-      <li>
         <a href="{{ ref . "register" }}">{{ .Site.Param "navigation.register" }}</a>
       </li>
       <li>
         <a href="{{ ref . "events" }}">{{ .Site.Param "navigation.events" }}</a>
+      </li>
+      <li>
+        <a href="{{ ref . "workplaces" }}">{{ .Site.Param "navigation.workplaces" }}</a>
       </li>
       <li>
         <a href="{{ ref . "faq" }}">{{ .Site.Param "navigation.faq" }}</a>
