--- a/assets/scss/_mixins.scss
+++ b/assets/scss/_mixins.scss
@@ -38,7 +38,6 @@
 @mixin title {
     font-size: 32px;
     font-weight: 600;
-    display: inline-block;
     letter-spacing: -1px;
 }
 
@@ -139,24 +138,25 @@
 
     h2 {
         @include title;
-        padding: 24px 0;
+        margin: 36px 0 0 0;
         font-weight: 800;
     }
 
     h3 {
         @include title;
-        padding: 24px 0;
+        margin: 36px 0 0 0;
+        line-height: 1.2em;
     }
 
     h4 {
         font-size: 22px;
         font-weight: 800;
-        margin-top: 20px;
+        margin: 36px 0 0 0;
     }
 
     ul {
-        list-style-type: square;
-        padding: 6px 0 6px 32px;
+        list-style-type: disclosure-closed;
+        margin: 24px 0 24px 32px;
         font-weight: 500;
         text-align: left;
 
