--- a/assets/scss/_single.scss
+++ b/assets/scss/_single.scss
@@ -15,6 +15,10 @@
     display: flex;
     gap: 6px;
 
+    @include mobile {
+        justify-content: center;
+    }
+
     a {
         color: $light-color;
         text-decoration: none;
@@ -34,6 +38,11 @@
             color: $primary-color;
             border-color: $light-color;
             font-weight: 600;
+        }
+
+        @include mobile {
+            font-size: 16px;
+            padding: 12px;
         }
     }
 }
@@ -58,6 +67,12 @@
     }
 }
 
+.single-page-sub-title {
+    font-weight: 400;
+    font-size: 27px;
+    line-height: 1.4em;
+}
+
 .single-page-description {
     display: flex;
     flex-direction: column;
@@ -78,6 +93,10 @@
     em {
         font-style: italic;
         font-weight: 300;
+    }
+
+    .contact-list {
+        margin: 0 0 12px 0;
     }
 }
 
