Add Moravia IT to workplaces (#239)
Add Moravia IT to workplaces (I checked with the responsible person if
it is okay with them)
----------
__Please confirm the following:__

- [x] I accept and respect the [statuses of Odborová organizace
pracujících v
ICT](https://ictunion.cz/downloads/ictunion-statutes-en.pdf)
- [x] I'm providing all content changes under the [CC BY
4.0](https://creativecommons.org/licenses/by/4.0/) license

---------

[anonymized]

--- a/layouts/partials/workplace-item.html
+++ b/layouts/partials/workplace-item.html
@@ -12,7 +12,7 @@
       </h2>
     {{ else }}
       <h2 class="workplaces-workplace-title">
-        {{ .Title }}
+        {{ .title }}
       </h2>
     {{ end }}
   </div>
