Changed Email field in form (#244)
This updates the form in an attempt to dissuade ppl from registering
with their employer's address.


----------
__Please confirm the following:__

- [x] I accept and respect the [statuses of Odborová organizace
pracujících v
ICT](https://ictunion.cz/downloads/ictunion-statutes-en.pdf)
- [x] I'm providing all content changes under the [CC BY
4.0](https://creativecommons.org/licenses/by/4.0/) license

---------

[anonymized]

--- a/layouts/register/list.html
+++ b/layouts/register/list.html
@@ -24,7 +24,7 @@
 
             <fieldset class="register-fieldset">
               <div class="register-form-field">
-                <label class="register-form-label">{{ i18n "Email" }}:
+                <label class="register-form-label">{{ i18n "PrivateEmail" }}:
                   <input class="register-form-input" name="email" type="email" placeholder="{{ i18n "jane.doe@email.com" }}" />
                 </label>
               </div>
