Fix #228: Improve union application (#247)
- Change the "address" to be "contact address" and "adresa" to be
"kontaktní adresa"
- Change the bottom error to state "Before submitting, it is necessary
to agree with the statutes." and to "Před odesláním je třeba souhlasit
se stanovami."
- Mention that if people need to omit some other information from their
application they can contact
[support@ictunion.cz](mailto:support@ictunion.cz)
- Change "Private Email" to "Private/Personal Email"
- Disallow email domains of the workplaces where we organize 

fixes #228


----------
__Please confirm the following:__

- [x] I accept and respect the [statuses of Odborová organizace
pracujících v
ICT](https://ictunion.cz/downloads/ictunion-statutes-en.pdf)
- [x] I'm providing all content changes under the [CC BY
4.0](https://creativecommons.org/licenses/by/4.0/) license

--- a/layouts/register/list.html
+++ b/layouts/register/list.html
@@ -25,8 +25,13 @@
             <fieldset class="register-fieldset">
               <div class="register-form-field">
                 <label class="register-form-label">{{ i18n "PrivateEmail" }}:
-                  <input class="register-form-input" name="email" type="email" placeholder="{{ i18n "jane.doe@email.com" }}" />
-                </label>
+                  <input  class="register-form-input"
+                          name="email"
+                          type="email"
+                          placeholder="{{ i18n "jane.doe@email.com" }}"
+                          pattern="^.+@(?!.*rws\.com|redhat\.com|moravia\.com).*$"
+                          title="{{ i18n "Email Warning" }}"/>
+                  </label>
               </div>
             </fieldset>
 
@@ -55,7 +60,7 @@
 
             <fieldset class="register-fieldset">
               <div class="register-form-field">
-                <label class="register-form-label">{{ i18n "Address" }}:
+                <label class="register-form-label">{{ i18n "ContactAddress" }}:
                   <input class="register-form-input" name="address" type="text" placeholder="Bezručova 42" />
                 </label>
               </div>
