Hide petition sign functionality for past events (#253)
Fixes https://github.com/ictunion/main-website/issues/251

----------
__Please confirm the following:__

- [x] I accept and respect the [statuses of Odborová organizace
pracujících v
ICT](https://ictunion.cz/downloads/ictunion-statutes-en.pdf)
- [x] I'm providing all content changes under the [CC BY
4.0](https://creativecommons.org/licenses/by/4.0/) license

--- a/layouts/events/single.html
+++ b/layouts/events/single.html
@@ -53,7 +53,7 @@
         {{ .Content }}
       </article>
 
-      {{ if .Page.Param "petitionId"}}
+      {{ if and (.Page.Param "petitionId") (not $past)  }}
         <div class="event-detail-petition-container">
           <x-petition petitionId="{{ .Params.PetitionId }}" class="event-detail-petition-embed">
             <div class="events-cookie-consent">
