Add new workplace(s) (#263)
Add new workplace(s)


----------
__Please confirm the following:__

- [x] I accept and respect the [statuses of Odborová organizace
pracujících v
ICT](https://ictunion.cz/downloads/ictunion-statutes-en.pdf)
- [x] I'm providing all content changes under the [CC BY
4.0](https://creativecommons.org/licenses/by/4.0/) license

--- a/layouts/register/list.html
+++ b/layouts/register/list.html
@@ -29,7 +29,7 @@
                           name="email"
                           type="email"
                           placeholder="{{ i18n "jane.doe@email.com" }}"
-                          pattern="^.+@(?!.*rws\.com|redhat\.com|moravia\.com).*$"
+                          pattern="^.+@(?!.*rws\.com|redhat\.com|moravia\.com|expediagroup.com|microsoft.com|skype.net).*$"
                           title="{{ i18n "Email Warning" }}"/>
                   </label>
               </div>
