--- a/assets/scss/_events.scss
+++ b/assets/scss/_events.scss
@@ -14,6 +14,7 @@
     @include section-title;
     border-bottom: solid 10px $primary-color;
     font-size: 68px;
+    line-height: 1.1em; // Events tend to have very long titles with spill over multiple lines
 
     @include mobile {
         font-size: 52px;
