Improve alternate text for logos (#276)
Applying change from one of the members.


----------
__Please confirm the following:__

- [x] I accept and respect the [statuses of Odborová organizace
pracujících v
ICT](https://ictunion.cz/downloads/ictunion-statutes-en.pdf)
- [x] I'm providing all content changes under the [CC BY
4.0](https://creativecommons.org/licenses/by/4.0/) license

[anonymized]
[anonymized]

--- a/layouts/about/single.html
+++ b/layouts/about/single.html
@@ -21,7 +21,7 @@
   <main class="about-page-body">
     <div class="about-page-right">
       {{ $logo := resources.Get "svg/oop-ict-logo.svg" | resources.Fingerprint "sha512" }}
-      <img src="{{ $logo.Permalink }}" alt="{{ .Param "title" }}" />
+      <img src="{{ $logo.Permalink }}" alt="" />
     </div>
     <div class="about-page-left">
       {{ .Content }}
