Improve accessibility of language selector (#278)
apply patch from anonymous member. This improves accessibility of
language selector


----------
__Please confirm the following:__

- [x] I accept and respect the [statuses of Odborová organizace
pracujících v
ICT](https://ictunion.cz/downloads/ictunion-statutes-en.pdf)
- [x] I'm providing all content changes under the [CC BY
4.0](https://creativecommons.org/licenses/by/4.0/) license

[anonymized]
[anonymized]

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -28,7 +28,7 @@
         <a href="{{ ref . "faq" }}">{{ .Site.Param "navigation.faq" }}</a>
       </li>
     </ul>
-    <select class="language-selector" onchange="switchLanguage(this.value)">
+    <select class="language-selector" onchange="switchLanguage(this.value)" aria-label="{{ i18n "Select language" }}">
       {{ $siteLanguages := site.Languages }}
       {{ $pageLang := .Page.Lang }}
       {{- range .Page.AllTranslations }}
