--- a/assets/scss/_site-styles.scss
+++ b/assets/scss/_site-styles.scss
@@ -125,6 +125,10 @@ body {
         margin-bottom: 24px;
         font-size: 12px;
     }
+
+    &:focus {
+        border-color: $primary-color;
+    }
 }
 
 .site-footer {
