Improve accessibility of shuffled typing (#279)
apply patch from anonymous member.

This improves accessibility on the home animation.


----------
__Please confirm the following:__

- [x] I accept and respect the [statuses of Odborová organizace
pracujících v
ICT](https://ictunion.cz/downloads/ictunion-statutes-en.pdf)
- [x] I'm providing all content changes under the [CC BY
4.0](https://creativecommons.org/licenses/by/4.0/) license

[anonymized]
[anonymized]

--- a/layouts/partials/home-header.html
+++ b/layouts/partials/home-header.html
@@ -9,9 +9,9 @@
       <h1 class="home-header-headline">
         <strong>{{ .Page.Param "title" }}</strong> <small>{{ .Page.Param "subTitle" }}</small>
       </h1>
-      <a class="home-header-tag-line" href="{{ ref . "faq" }}#12-who-are-we">
+      <a class="home-header-tag-line" href="{{ ref . "faq" }}#12-who-are-we" aria-label="{{ i18n "Who we are" }}">
         <span class="home-header-tag-line-we-are">{{ i18n "We are" }}</span>
-        <span class="home-header-tag-line-occupation" data-effect="shuffled-typing">
+        <span class="home-header-tag-line-occupation" data-effect="shuffled-typing" role="marquee">
           <script type="application/json">
             {{ $pageLang := .Page.Lang }}
             {{ $res := slice  }}
