Accessibly label social media icons (#277)
applying patch from anonymous union member.

@Kubik161 can you please check that this won't break with your ad
blocker (since you had some issues in past).


----------
__Please confirm the following:__

- [x] I accept and respect the [statuses of Odborová organizace
pracujících v
ICT](https://ictunion.cz/downloads/ictunion-statutes-en.pdf)
- [x] I'm providing all content changes under the [CC BY
4.0](https://creativecommons.org/licenses/by/4.0/) license

[anonymized]
[anonymized]

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -38,28 +38,28 @@
           <h4 class="site-footer-title">{{ .Param "footer.socials" }}</h4>
           <div class="site-footer-social-links">
             {{ if .Site.Param "social.facebook" }}
-              <a target="blank" href="{{ .Site.Param "social.facebook" }}"><span class="icon facebook"></span></a>
+              <a target="blank" href="{{ .Site.Param "social.facebook" }}"><span class="icon facebook" aria-label="Facebook"></span></a>
             {{ end }}
             {{ if .Site.Param "social.twitter" }}
-              <a target="_blank" href="{{ .Site.Param "social.twitter" }}"><span class="icon bird_site"></span></a>
+              <a target="_blank" href="{{ .Site.Param "social.twitter" }}"><span class="icon bird_site" aria-label="Twitter"></span></a>
             {{ end }}
             {{ if .Site.Param "social.linkedin" }}
-              <a target="blank" href="{{ .Site.Param "social.linkedin" }}"><span class="icon job_site"></span></a>
+              <a target="blank" href="{{ .Site.Param "social.linkedin" }}"><span class="icon job_site" aria-label="LinkedIn"></span></a>
             {{ end }}
             {{ if .Site.Param "social.github" }}
-              <a target="blank" href="{{ .Site.Param "social.github" }}"><span class="icon github"></span></a>
+              <a target="blank" href="{{ .Site.Param "social.github" }}"><span class="icon github" aria-label="GitHub"></span></a>
             {{ end }}
             {{ if .Site.Param "social.youtube" }}
-              <a target="blank" href="{{ .Site.Param "social.youtube" }}"><span class="icon video_site"></span></a>
+              <a target="blank" href="{{ .Site.Param "social.youtube" }}"><span class="icon video_site" aria-label="YouTube"></span></a>
             {{ end }}
             {{ if .Site.Param "social.instagram" }}
-              <a target="blank" href="{{ .Site.Param "social.instagram" }}"><span class="icon photo_site"></span></a>
+              <a target="blank" href="{{ .Site.Param "social.instagram" }}"><span class="icon photo_site" aria-label="Instagram"></span></a>
             {{ end }}
             {{ if .Site.Param "social.mastodon" }}
-              <a rel="me" target="blank" href="{{ .Site.Param "social.mastodon" }}"><span class="icon mastodon"></span></a>
+              <a rel="me" target="blank" href="{{ .Site.Param "social.mastodon" }}"><span class="icon mastodon" aria-label="Mastodon"></span></a>
             {{ end }}
             {{ with .OutputFormats.Get "rss" -}}
-              <a target="_blank" href="{{.Permalink}}"><span class="icon rss"></span></a>
+              <a target="_blank" href="{{.Permalink}}"><span class="icon rss" aria-label="RSS"></span></a>
             {{ end }}
           </div>
         </section>
