--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -31,3 +31,4 @@ but it makes long term maintainanece much simpler.
 @import "statements";
 @import "workplaces";
 @import "shortcodes";
+@import "career";
