Fix #285: Workplace organizing CTA (#290)
Fixes #285: Workplace organizing call to action. Only english version
for now, after it is approved I will add Czech version.


![image](https://github.com/user-attachments/assets/08ee26a5-911c-4293-bd99-1c79d4402f9b)


![image](https://github.com/user-attachments/assets/0ced1f28-1394-4585-8100-5bff5baf177e)

----------
__Please confirm the following:__

- [x] I accept and respect the [statuses of Odborová organizace
pracujících v
ICT](https://ictunion.cz/downloads/ictunion-statutes-en.pdf)
- [x] I'm providing all content changes under the [CC BY
4.0](https://creativecommons.org/licenses/by/4.0/) license

--- a/layouts/partials/home-header.html
+++ b/layouts/partials/home-header.html
@@ -25,9 +25,7 @@
     </div>
     <div class="home-header-join-us-cta">
       <a href="{{ ref . "register" }}" class="home-header-join-us-cta-btn">{{ .Param "joinCta" }}</a>
-      <div class="home-header-join-us-text">
-        {{ .Content }}
-      </div>
+      <a href="{{ ref . "workplaces" }}" class="home-header-join-us-cta-btn">{{ .Param "createWorkplace" }}</a>
     </div>
   </div>
 </section>
