--- a/assets/scss/_home.scss
+++ b/assets/scss/_home.scss
@@ -11,7 +11,7 @@
     display: flex;
     justify-content: space-between;
     gap: 24px;
-    align-items: flex-end;
+    align-items: center;
     padding-top: 72px;
     padding-bottom: 48px;
 
@@ -127,7 +127,7 @@
     display: flex;
     flex-direction: column;
     font-size: 24px;
-    max-width: 300px;
+    max-width: 450px;
     color: $mutted-color;
 
     @include tablet {
@@ -158,13 +158,23 @@
 
 .home-header-join-us-cta-btn {
     @include cta-btn;
+    font-size: 20px;
     display: inline-block;
-    padding-left: 0;
-    padding-right: 0;
+    padding: 24px;
+    margin-bottom: 24px;
+
+    &:last-child {
+        margin-bottom: 0;
+    }
 
     @include tablet {
         display: block;
         width: 100%;
+    }
+
+    @include mobile {
+        font-size: 16px;
+        font-stretch: condensed;
     }
 }
 
