better upcoming title and both dates for events (#294)
Better way to display ongoing events


----------
__Please confirm the following:__

- [x] I accept and respect the [statuses of Odborová organizace
pracujících v
ICT](https://ictunion.cz/downloads/ictunion-statutes-en.pdf)
- [x] I'm providing all content changes under the [CC BY
4.0](https://creativecommons.org/licenses/by/4.0/) license

---------

[anonymized]
[anonymized]

--- a/layouts/partials/event-item.html
+++ b/layouts/partials/event-item.html
@@ -3,8 +3,14 @@
     <header class="events-event-header">
       {{ if .Param "startDate" }}
         <span class="events-event-date">{{ .Param "startDate" | time.Format ":date_medium" }}</span>
-      {{ else if .Param "date"  }}
-        <span class="evenets-event-date">{{ .Param "date" | time.Format ":date_medium" }}</span>
+      {{ end }}
+
+      {{ if .Param "date"}}
+        <!-- This checks if dates are different and displays end date if they are different -->
+        {{ if not (eq (.Param "startDate" | time.Format ":date_medium") (.Param "date" | time.Format ":date_medium")) }}
+          <span class="events-event-date-dash">━</span>
+          <span class="events-event-date">{{ .Param "date" | time.Format ":date_medium" }}</span>
+        {{ end }}
       {{ end }}
 
       <div class="events-event-head">
