--- a/assets/scss/_events.scss
+++ b/assets/scss/_events.scss
@@ -116,6 +116,17 @@
     flex-shrink: 1;
 }
 
+.events-event-date-dash {
+    font-family: $secondary-font;
+    color: $primary-color;
+    font-weight: 600;
+    padding: 20px 4px;
+    text-align: center;
+    display: block;
+    width: 16px;
+    flex-shrink: 0;
+    flex-grow: 0;
+}
 
 .events-event-date {
     font-family: $secondary-font;
