Add new workplaces (#302)
Add new workplaces. Supersedes #292


----------
__Please confirm the following:__

- [x] I accept and respect the [statuses of Odborová organizace
pracujících v
ICT](https://ictunion.cz/downloads/ictunion-statutes-en.pdf)
- [x] I'm providing all content changes under the [CC BY
4.0](https://creativecommons.org/licenses/by/4.0/) license

--- a/layouts/register/list.html
+++ b/layouts/register/list.html
@@ -29,7 +29,7 @@
                           name="email"
                           type="email"
                           placeholder="{{ i18n "jane.doe@email.com" }}"
-                          pattern="^.+@(?!.*rws\.com|redhat\.com|moravia\.com|expediagroup.com|microsoft.com|skype.net|infosys.com).*$"
+                          pattern="^.+@(?!.*rws\.com|redhat\.com|moravia\.com|expediagroup\.com|microsoft\.com|skype\.net|infosys\.com|dhl\.com|monster\.com).*$"
                           title="{{ i18n "Email Warning" }}"/>
                   </label>
               </div>
@@ -111,6 +111,8 @@
                       <option value="Red Hat Czech s.r.o."></option>
                       <option value="Skype Czech Republic s.r.o."></option>
                       <option value="Expedia Services CZ, s.r.o."></option>
+                      <option value="Monster Worldwide CZ s.r.o"></option>
+                      <option value="DHL IT Services (Europe), s.r.o."></option>
                     </datalist>
                   </label>
                 </div>
