added worker declaration text (#307)
Added new text (Worker Declaration) to About us section


----------
__Please confirm the following:__

- [x] I accept and respect the [statuses of Odborová organizace
pracujících v
ICT](https://ictunion.cz/downloads/ictunion-statutes-en.pdf)
- [x] I'm providing all content changes under the [CC BY
4.0](https://creativecommons.org/licenses/by/4.0/) license

--- a/assets/scss/_single.scss
+++ b/assets/scss/_single.scss
@@ -12,12 +12,10 @@
 }
 
 .single-page-sub-nav {
+    flex: 1;
     display: flex;
+    overflow: auto;
     gap: 6px;
-
-    @include mobile {
-        justify-content: center;
-    }
 
     a {
         color: $light-color;
