--- a/layouts/partials/secondary-navigation.html
+++ b/layouts/partials/secondary-navigation.html
@@ -2,4 +2,5 @@
     <a class="{{ if (eq .Type "about") }}active{{ end }}" href="{{ ref . "about" }}">{{ i18n "info" }}</a>
     <a class="{{ if (eq .Type "statements") }}active{{ end }}" href="{{ ref . "statements" }}">{{ i18n "statements" }}</a>
     <a class="{{ if (eq .Type "statutes") }}active{{ end }}" href="{{ ref . "statutes" }}">{{ .Site.Param "navigation.statutes" }}</a>
+    <a class="{{ if (eq .Type "declaration") }}active{{ end }}" href="{{ ref . "declaration" }}">{{ .Site.Param "navigation.declaration" }}</a>
 </nav>
