--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -24,6 +24,9 @@
       <li>
         <a href="{{ ref . "workplaces" }}">{{ .Site.Param "navigation.workplaces" }}</a>
       </li>
+            <li>
+        <a href="{{ ref . "for-members" }}">{{ .Site.Param "navigation.forMembers" }}</a>
+      </li>
       <li>
         <a href="{{ ref . "faq" }}">{{ .Site.Param "navigation.faq" }}</a>
       </li>
