--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -27,6 +27,9 @@
               <a href="{{ ref . "workplaces" }}">{{ .Param "navigation.workplaces" }}</a>
             </li>
             <li>
+              <a href="{{ ref . "for-members" }}">{{ .Param "navigation.forMembers" }}</a>
+            </li>
+            <li>
               <a href="{{ ref . "faq" }}">{{ .Param "navigation.faq" }}</a>
             </li>
           </ul>
